Remove preview flag